--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://aneagoie.github.io/robofriends-pwa",
   "dependencies": {
     "gh-pages": "^1.1.0",
+    "husky": "^1.3.1",
+    "pretty-quick": "^1.10.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
@@ -20,13 +22,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "pretty-quick --staged"
   },
   "devDependencies": {
     "dotenv": "^7.0.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16.2": "^1.5.1",
     "nock": "^10.0.6",
+    "prettier": "1.16.4",
     "redux-mock-store": "^1.5.3"
   }
 }
